# modpack-syncer

./: .gitignore  AGENTS.md  README.md  biome.json  index.html  package.json
.codex/skills/caveman-sonata/: SKILL.md
.github/: copilot-instructions.md
.github/skills/caveman-sonata/: SKILL.md
.github/workflows/: release-desktop.yml  release-windows.yml
docs/: admin-mode-test-guide.md  agent-targets.md  architecture.md  github-setup.md  index.md  minimal-pack-guide.md  planned_features.md  project-brief.md  publish-auth.md  quality.md  update_syncer.md  vps-setup.md
docs/architecture/: index.md
docs/exec-plans/active/: 2026-05-01-fast-sync-metadata.md  2026-05-01-sonata-retrofit.md  2026-05-05-manual-java-autofill.md  2026-05-05-windows-managed-prism.md
docs/exec-plans/completed/: 2026-05-03-custom-offline-identity.md  2026-05-03-macos-release-builds.md  2026-05-04-launch-presets.md  2026-05-04-local-pack-creation.md  2026-05-05-macos-dmg-gatekeeper.md  2026-05-05-pack-detail-table-scroll.md
openspec/: config.yaml
openspec/changes/: about-route.md  compact-artifact-lists-local-disable.md  drop-minio.md  force-fetch-pack.md  interface-motion.md  m0-foundation.md  modpack-builder.md  modrinth-artifact-admin-add.md  onboarding-stepper-default-directory.md  option-category-sync-toggles.md  option-presets.md  pack-profile-manifests.md  preset-file-artifact-overrides.md  publish-amend-and-builder-deps.md  publish-ignore.md  publish-preview-compact-artifacts.md  publish-push-progress.md  shaderpack-sha-drift.md  switch-to-github.md  sync-launch-gate.md  sync-preview-and-partial-merge.md
openspec/specs/: app-shell.md  app-updates.md  interface-motion.md  launcher-integration.md  manifest.md  onboarding.md  profiles.md  publish-flow.md  sync-engine.md
scripts/: README.md  pack-gen.example.json  pack-gen.ts  release-sync.ts  release-tag.ts  release-verify.ts
src/: README.md  app.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cache.rs  commands.rs  db.rs  download.rs  git.rs  keychain.rs  lib.rs  main.rs  manifest.rs  paths.rs  prism.rs  profile.rs
src-tauri/src/commands/: app_settings.rs  changelog.rs  modrinth.rs  option_presets.rs  packs.rs  prism_control.rs  publish.rs  publish_auth.rs  status.rs  sync.rs  sync_review.rs
src-tauri/src/prism/: install.rs
src/components/: pack-icon.tsx  sidebar.tsx  theme-provider.tsx  title-bar.tsx
src/components/ui/: alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button-group.tsx  button.tsx  calendar.tsx  card.tsx  chat-bubble.tsx  chat-input.tsx  chat-typography.tsx  checkbox.tsx  data-table.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  motion.tsx  pagination.tsx  popover.tsx  radio-group.tsx  scroll-area.tsx  select.tsx  sidebar.tsx  slider.tsx  sonner.tsx  switch.tsx  table.tsx  tabs.tsx  tactical-grid.tsx  textarea.tsx  tool-call-card.tsx  tooltip.tsx
src/features/app-updates/: app-update-panels.tsx
src/features/modpack-builder/: modpack-builder-page.tsx
src/features/onboarding/: onboarding-flow.tsx
src/features/packs/artifact-status/: artifact-status-rows.tsx
src/features/packs/changelog/: changelog-card.tsx  changelog-dialog.tsx
src/hooks/: use-app-update.ts  use-app-version.ts
src/lib/: format-error.ts  modrinth.ts  tauri.ts
src/routes/: about.tsx  home.tsx  modpack-builder.tsx  onboarding.tsx  pack-detail.tsx  settings.tsx
src/stores/: app-store.ts  nav-store.ts
src/styles/: index.css
tests/: README.md
(+12 files in other folders)
