[package]
name = "modsync"
version = "1.2.3"
description = "Minecraft modpack syncer + Prism launcher wrapper"
authors = ["gisketch"]
edition = "2021"

[lib]
name = "modsync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core + plugins
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"

# Async + HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "stream", "json", "gzip"] }
futures = "0.3"

# Git (libgit2 bindings, vendored so no system git needed)
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2", "https", "ssh"] }

# Local DB
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Hashing
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"

# Zip / compression
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = "0.4"

# Errors + logging
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OS keychain for Gitea PAT
keyring = "3"

# Paths
directories = "5"

# URL parsing (allowlist checks)
url = "2"

# Concurrency helpers
parking_lot = "0.12"
once_cell = "1"
uuid = { version = "1", features = ["v3"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
